--- a/.github/workflows/etl.yaml
+++ b/.github/workflows/etl.yaml
@@ -22,3 +22,7 @@ jobs:
           key: ${{ runner.os }}-r-${{ hashFiles('**/lockfile') }}
           restore-keys: |
             ${{ runner.os }}-r-
+      - name: Install packages
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: |
+          Rscript -e 'install.packages(c("ggplot2","dplyr","readr","RSQLite"))'
