--- a/.github/workflows/etl.yaml
+++ b/.github/workflows/etl.yaml
@@ -26,3 +26,6 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
           Rscript -e 'install.packages(c("ggplot2","dplyr","readr","RSQLite"))'
+      - name: Execute R script
+        run: |
+          Rscript R/load_data.R
