--- a/.github/workflows/etl.yaml
+++ b/.github/workflows/etl.yaml
@@ -28,5 +28,5 @@ jobs:
           Rscript -e 'install.packages(c("ggplot2","dplyr","readr","RSQLite"))'
       - name: Execute R script
         run: |
-          Rscript R/regression_plot.R
+          Rscript R/load_data.R
       
