--- a/.github/workflows/etl.yaml
+++ b/.github/workflows/etl.yaml
@@ -30,10 +30,10 @@ jobs:
         run: |
           git config --global user.email "chiaoyunting@gmail.com"
           git config --global user.name "ChiaoYunTing"
-          git add --all figures/
+          git add -A  # Add all changes to staging area
       - name: Commit files
         run: |
-          git commit -m "Add plot figure"
+          git commit -m "Add plot figure" || echo "No changes to commit"
       - name: Push changes
         uses: ad-m/github-push-action@v0.6.0
         with:
